--- a/platform/pom.xml
+++ b/platform/pom.xml
@@ -18,5 +18,21 @@
 	<packaging>pom</packaging>
 	<name>Spring IO platform</name>
 	<description>Spring IO platform</description>
+	
+	<properties>
+		<aspectj.version>1.8.0</aspectj.version>
+		<reactor.version>1.1.0.RELEASE</reactor.version>
+	</properties>
+
+	<repositories>
+		<repository>
+			<id>spring-snapshots</id>
+			<name>Spring Snapshots</name>
+			<url>http://repo.spring.io/libs-snapshot</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
 
 </project>
