--- a/platform/pom.xml
+++ b/platform/pom.xml
@@ -26,6 +26,8 @@
 		<spring-plugin.version>1.1.0.RELEASE</spring-plugin.version>
 		<spring-retry.version>1.1.0.RC1</spring-retry.version>
 		<spring-social.version>1.1.0.RELEASE</spring-social.version>
+		<spring-social-facebook.version>1.1.1.RELEASE</spring-social-facebook.version>
+		<spring-social-twitter.version>1.1.0.RELEASE</spring-social-twitter.version>
 		<spring-web-flow.version>2.4.0.RC1</spring-web-flow.version>
 		<spring-web-services.version>2.2.0.RC1</spring-web-services.version>
 	</properties>
@@ -177,17 +179,17 @@
 			<dependency>
 				<groupId>org.springframework.social</groupId>
 				<artifactId>spring-social-facebook</artifactId>
-				<version>${spring-social.version}</version>
+				<version>${spring-social-facebook.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.social</groupId>
 				<artifactId>spring-social-facebook-web</artifactId>
-				<version>${spring-social.version}</version>
+				<version>${spring-social-facebook.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.social</groupId>
 				<artifactId>spring-social-twitter</artifactId>
-				<version>${spring-social.version}</version>
+				<version>${spring-social-twitter.version}</version>
 			</dependency>
 
 			<!-- Spring Web Flow -->
