Add a test that verifies the Platform pom's dependency management
The test creates a pom that has a dependency on every artifact for which
the platform provide's dependency management and builds it. The build
will fail if any of the dependencies cannot be resolved.

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<modules>
 		<module>platform</module>
 		<module>platform-versions</module>
+		<module>pom-tests</module>
 	</modules>
 
 </project>
