--- a/platform/pom.xml
+++ b/platform/pom.xml
@@ -38,7 +38,7 @@
 		<apache-shared-ldap.version>0.9.15</apache-shared-ldap.version>
 		<bouncycastle.version>1.47</bouncycastle.version>
 		<bsf.version>2.4.0</bsf.version>
-		<bsh.version>2.0bf</bsh.version>
+		<bsh.version>2.0b4</bsh.version>
 		<c3p0.version>0.9.2.1</c3p0.version>
 		<cas-client.version>3.2.1</cas-client.version>
 		<castor.version>1.3.3</castor.version>
