Add Batch modules not currently covered by Boot
Before Boot 1.1.0 is released it will upgrade to Batch 3.0 and provide
dependency management for all of its modules [1]. In the meantime, the
Spring IO pom has been updated to override the value of the
spring-batch.version property and to add dependency management for the
modules not covered by Boot.

[1] spring-projects/spring-boot#800

--- a/platform/pom.xml
+++ b/platform/pom.xml
@@ -20,6 +20,8 @@
 	<description>Spring IO platform</description>
 	
 	<properties>
+
+		<spring-batch.version>3.0.0.BUILD-SNAPSHOT</spring-batch.version>
 		<spring-cloud.version>0.9.9.BUILD-SNAPSHOT</spring-cloud.version>
 		<spring-data-hadoop.version>2.0.0.RC3</spring-data-hadoop.version>
 		<spring-ldap.version>2.0.1.RELEASE</spring-ldap.version>
@@ -209,6 +211,23 @@
 				<groupId>org.springframework.data</groupId>
 				<artifactId>spring-yarn-test</artifactId>
 				<version>${spring-data-hadoop.version}</version>
+			</dependency>
+
+			<!-- Spring Batch -->
+			<dependency>
+				<groupId>org.springframework.batch</groupId>
+				<artifactId>spring-batch-infrastructure</artifactId>
+				<version>${spring-batch.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.batch</groupId>
+				<artifactId>spring-batch-integration</artifactId>
+				<version>${spring-batch.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.batch</groupId>
+				<artifactId>spring-batch-test</artifactId>
+				<version>${spring-batch.version}</version>
 			</dependency>
 
 			<!-- Spring Cloud -->
