--- a/platform/pom.xml
+++ b/platform/pom.xml
@@ -58,6 +58,7 @@
 		<commons-net.version>3.3</commons-net.version>
 		<derby.version>10.10.2.0</derby.version>
 		<eclipselink.version>2.5.1</eclipselink.version>
+		<eclipselink-javax-persistence.version>2.1.0</eclipselink-javax-persistence.version>
 		<ehcache-core.version>2.6.5</ehcache-core.version>
 		<evo-inflector.version>1.1</evo-inflector.version>
 		<findbugs-jsr305.version>2.0.0</findbugs-jsr305.version>
@@ -92,7 +93,6 @@
 		<javax-jdo.version>3.0</javax-jdo.version>
 		<javax-jsp.version>2.2.1</javax-jsp.version>
 		<javax-mail.version>1.4.7</javax-mail.version>
-		<javax-persistence.version>2.0.0</javax-persistence.version>
 		<javax-portlet.version>2.0</javax-portlet.version>
 		<javax-saaj.version>1.3.5</javax-saaj.version>
 		<javax-transaction.version>1.2</javax-transaction.version>
@@ -1103,7 +1103,7 @@
 			<dependency>
 				<groupId>org.eclipse.persistence</groupId>
 				<artifactId>javax.persistence</artifactId>
-				<version>${javax-persistence.version}</version>
+				<version>${eclipselink-javax-persistence.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.eclipse.persistence</groupId>
