--- a/_config.yml
+++ b/_config.yml
@@ -10,28 +10,24 @@ redcarpet:
 ### The following properties will change on a project-by-project basis
 
 # Context path in the remote website (usually /<project>), will be prepended to absolute URLs for static resources
-baseurl: /gh-pages
+baseurl: /platform
 
 # Name of the project for display in places like page titles
-name: Spring Framework
+name: Spring IO platform
 
 # ID of the project in the metadata API at spring.io (if this is not a
 # valid project ID the javascript widgets in the home page will not work)
-project: spring-framework
+project: platform
 
 # Project github URL
-github_repo_url: http://github.com/spring-projects/spring-framework
-
-# Project forum URL
-forum: http://forum.spring.io/forum/spring-projects/container
+github_repo_url: http://github.com/spring-io/platform
 
 # If you want to include a custom pom.xml or gradle template set these value to true and add _include files
-custom_pom_template: false
-custom_gradle_template: false
+custom_pom_template: yes
+custom_gradle_template: yes
 
 
 ### The following properties are constant for most projects
 
 main_site_url: http://spring.io
 projects_site_url: http://projects.spring.io
-forum_url: http://forum.spring.io
