--- a/platform/pom.xml
+++ b/platform/pom.xml
@@ -26,7 +26,7 @@
 		<spring-data-hadoop.version>2.0.0.RC3</spring-data-hadoop.version>
 		<spring-ldap.version>2.0.1.RELEASE</spring-ldap.version>
 		<spring-plugin.version>1.1.0.RELEASE</spring-plugin.version>
-		<spring-retry.version>1.1.0.RC3</spring-retry.version>
+		<spring-retry.version>1.1.0.RELEASE</spring-retry.version>
 		<spring-social.version>1.1.0.RELEASE</spring-social.version>
 		<spring-social-facebook.version>1.1.1.RELEASE</spring-social-facebook.version>
 		<spring-social-twitter.version>1.1.0.RELEASE</spring-social-twitter.version>
