--- a/platform/pom.xml
+++ b/platform/pom.xml
@@ -21,7 +21,7 @@
 	
 	<properties>
 
-		<spring-batch.version>3.0.0.BUILD-SNAPSHOT</spring-batch.version>
+		<spring-batch.version>3.0.0.RC1</spring-batch.version>
 		<spring-cloud.version>0.9.9.BUILD-SNAPSHOT</spring-cloud.version>
 		<spring-data-hadoop.version>2.0.0.RC3</spring-data-hadoop.version>
 		<spring-ldap.version>2.0.1.RELEASE</spring-ldap.version>
