--- a/platform/pom.xml
+++ b/platform/pom.xml
@@ -22,7 +22,7 @@
 	<properties>
 
 		<spring-batch.version>3.0.0.RC1</spring-batch.version>
-		<spring-cloud.version>0.9.9.BUILD-SNAPSHOT</spring-cloud.version>
+		<spring-cloud.version>0.9.9.RELEASE</spring-cloud.version>
 		<spring-data-hadoop.version>2.0.0.RC3</spring-data-hadoop.version>
 		<spring-ldap.version>2.0.1.RELEASE</spring-ldap.version>
 		<spring-plugin.version>1.1.0.RELEASE</spring-plugin.version>
