--- a/platform/pom.xml
+++ b/platform/pom.xml
@@ -1311,17 +1311,17 @@
 
 	<profiles>
 		<profile>
-			<id>spring-snapshots</id>
+			<id>spring-milestones</id>
 			<activation>
 				<activeByDefault>true</activeByDefault>
 			</activation>
 			<repositories>
 				<repository>
-					<id>spring-snapshots</id>
-					<name>Spring Snapshots</name>
-					<url>http://repo.spring.io/libs-snapshot</url>
+					<id>spring-milestones</id>
+					<name>Spring Milestones</name>
+					<url>http://repo.spring.io/libs-milestone</url>
 					<snapshots>
-						<enabled>true</enabled>
+						<enabled>false</enabled>
 					</snapshots>
 				</repository>
 			</repositories>
