--- a/platform/pom.xml
+++ b/platform/pom.xml
@@ -99,7 +99,7 @@
 		<javax-portlet.version>2.0</javax-portlet.version>
 		<javax-saaj.version>1.3.5</javax-saaj.version>
 		<javax-transaction.version>1.2</javax-transaction.version>
-		<javax-validation.version>1.0.0.GA</javax-validation.version>
+		<javax-validation.version>1.1.0.Final</javax-validation.version>
 		<javax-websocket.version>1.0</javax-websocket.version>
 		<jaxen.version>1.1.4</jaxen.version>
 		<jbatch-tck.version>1.0</jbatch-tck.version>
