Declare grails-dependencies as a pom dependency

--- a/platform/pom.xml
+++ b/platform/pom.xml
@@ -179,6 +179,7 @@
 				<groupId>org.grails</groupId>
 				<artifactId>grails-dependencies</artifactId>
 				<version>${grails.version}</version>
+				<type>pom</type>
 			</dependency>
 
 			<!-- Spring for Apache Hadoop -->
