--- a/platform-docs/pom.xml
+++ b/platform-docs/pom.xml
@@ -12,11 +12,70 @@
 	<name>Spring IO platform documentation</name>
 	<description>Spring IO platform documentation</description>
 
+	<dependencies>
+		<dependency>
+			<groupId>io.spring.platform</groupId>
+			<artifactId>platform-versions</artifactId>
+			<version>${project.version}</version>
+			<type>properties</type>
+		</dependency>
+	</dependencies>
+
 	<profiles>
 		<profile>
 			<id>full</id>
 			<build>
 				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-dependency-plugin</artifactId>
+						<version>2.8</version>
+						<executions>
+							<execution>
+								<id>copy-versions-properties</id>
+								<phase>generate-resources</phase>
+								<goals>
+									<goal>copy</goal>
+								</goals>
+								<configuration>
+									<artifactItems>
+										<artifactItem>
+											<groupId>io.spring.platform</groupId>
+											<artifactId>platform-versions</artifactId>
+											<version>${project.version}</version>
+											<type>properties</type>
+											<destFileName>platform-versions.properties</destFileName>
+										</artifactItem>
+									</artifactItems>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.codehaus.gmavenplus</groupId>
+						<artifactId>gmavenplus-plugin</artifactId>
+						<version>1.1</version>
+						<executions>
+							<execution>
+								<goals>
+									<goal>execute</goal>
+								</goals>
+								<phase>generate-resources</phase>
+							</execution>
+						</executions>
+						<configuration>
+							<scripts>
+								<script>file:///${project.basedir}/src/main/groovyScripts/createVersionsTable.groovy</script>
+							</scripts>
+						</configuration>
+						<dependencies>
+							<dependency>
+								<groupId>org.codehaus.groovy</groupId>
+								<artifactId>groovy-all</artifactId>
+								<version>2.3.0</version>
+							</dependency>
+						</dependencies>
+					</plugin>
 					<plugin>
 						<groupId>org.asciidoctor</groupId>
 						<artifactId>asciidoctor-maven-plugin</artifactId>
