--- a/platform/pom.xml
+++ b/platform/pom.xml
@@ -24,7 +24,7 @@
 		<grails.version>2.4.0.RC1</grails.version>
 
 		<spring-batch.version>3.0.0.RC1</spring-batch.version>
-		<spring-cloud.version>0.9.9.RELEASE</spring-cloud.version>
+		<spring-cloud.version>1.0.0.RC1</spring-cloud.version>
 		<spring-data-hadoop.version>2.0.0.RC3</spring-data-hadoop.version>
 		<spring-ldap.version>2.0.1.RELEASE</spring-ldap.version>
 		<spring-plugin.version>1.1.0.RELEASE</spring-plugin.version>
@@ -254,27 +254,22 @@
 			<!-- Spring Cloud -->
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
-				<artifactId>core</artifactId>
+				<artifactId>spring-cloud-core</artifactId>
 				<version>${spring-cloud.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
-				<artifactId>cloudfoundry-connector</artifactId>
+				<artifactId>spring-cloud-cloudfoundry-connector</artifactId>
 				<version>${spring-cloud.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
-				<artifactId>cloudfoundry-ups-connector</artifactId>
+				<artifactId>spring-cloud-heroku-connector</artifactId>
 				<version>${spring-cloud.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
-				<artifactId>heroku-connector</artifactId>
-				<version>${spring-cloud.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.cloud</groupId>
-				<artifactId>spring-service-connector</artifactId>
+				<artifactId>spring-cloud-spring-service-connector</artifactId>
 				<version>${spring-cloud.version}</version>
 			</dependency>
 
