--- a/platform/pom.xml
+++ b/platform/pom.xml
@@ -23,6 +23,7 @@
 
 		<grails.version>2.4.0.RC1</grails.version>
 
+		<spring-amqp.version>1.3.3.RELEASE</spring-amqp.version>
 		<spring-batch.version>3.0.0.RC1</spring-batch.version>
 		<spring-cloud.version>1.0.0.RC1</spring-cloud.version>
 		<spring-data-hadoop.version>2.0.0.RC3</spring-data-hadoop.version>
