Rename modules: platform -> platform-bom and platform-docs -> platform
Rename the platform artifact to platform-bom to better describe what
it is; it's the platform's bill of materials. Also renamed
platform-docs to platform. This is the artifact that represents the
Platform as a whole. All it does at the moment is publish the
Platform's docs but this may expand in the future.

--- a/platform-versions/pom.xml
+++ b/platform-versions/pom.xml
@@ -7,15 +7,15 @@
 
 	<parent>
 		<groupId>io.spring.platform</groupId>
-		<artifactId>platform</artifactId>
+		<artifactId>platform-bom</artifactId>
 		<version>1.0.0.BUILD-SNAPSHOT</version>
-		<relativePath>../platform</relativePath>
+		<relativePath>../platform-bom</relativePath>
 	</parent>
 
 	<artifactId>platform-versions</artifactId>
 	<packaging>pom</packaging>
-	<name>Spring IO platform versions</name>
-	<description>Spring IO platform versions</description>
+	<name>Spring IO Platform versions</name>
+	<description>Spring IO Platform versions</description>
 
 	<build>
 		<resources>
