--- a/platform/pom.xml
+++ b/platform/pom.xml
@@ -308,6 +308,7 @@
 										<artifact>
 											<file>${project.build.directory}/${project.artifactId}-${project.version}.zip</file>
 											<type>zip;zip.type=docs;zip.deployed=false</type>
+											<classifier>docs</classifier>
 										</artifact>
 									</artifacts>
 								</configuration>
