--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.1.0.M1</version>
+		<version>1.1.0.BUILD-SNAPSHOT</version>
 		<relativePath></relativePath>
 	</parent>
 
@@ -23,18 +23,33 @@
 
 		<grails.version>2.4.0.RC1</grails.version>
 
-		<spring-amqp.version>1.3.3.RELEASE</spring-amqp.version>
-		<spring-batch.version>3.0.0.RC1</spring-batch.version>
-		<spring-cloud.version>1.0.0.RC1</spring-cloud.version>
-		<spring-data-hadoop.version>2.0.0.RC3</spring-data-hadoop.version>
-		<spring-ldap.version>2.0.1.RELEASE</spring-ldap.version>
+		<spring.version>4.0.5.BUILD-SNAPSHOT</spring.version>
+		<spring-batch.version>3.0.0.BUILD-SNAPSHOT</spring-batch.version>
+		<spring-cloud.version>1.0.0.BUILD-SNAPSHOT</spring-cloud.version>
+		<spring-data-cassandra.version>1.0.0.BUILD-SNAPSHOT</spring-data-cassandra.version>
+		<spring-data-commons.version>1.8.0.BUILD-SNAPSHOT</spring-data-commons.version>
+		<spring-data-couchbase.version>1.1.0.BUILD-SNAPSHOT</spring-data-couchbase.version>
+		<spring-data-elasticsearch.version>1.0.0.BUILD-SNAPSHOT</spring-data-elasticsearch.version>
+		<spring-data-gemfire.version>1.4.0.BUILD-SNAPSHOT</spring-data-gemfire.version>
+		<spring-data-hadoop.version>2.0.0.BUILD-SNAPSHOT</spring-data-hadoop.version>
+		<spring-data-jpa.version>1.6.0.BUILD-SNAPSHOT</spring-data-jpa.version>
+		<spring-data-mongodb.version>1.5.0.BUILD-SNAPSHOT</spring-data-mongodb.version>
+		<spring-data-neo4j.version>3.1.0.BUILD-SNAPSHOT</spring-data-neo4j.version>
+		<spring-data-redis.version>1.3.0.BUILD-SNAPSHOT</spring-data-redis.version>
+		<spring-data-rest-webmvc.version>2.1.0.BUILD-SNAPSHOT</spring-data-rest-webmvc.version>
+		<spring-data-solr.version>1.2.0.BUILD-SNAPSHOT</spring-data-solr.version>
+		<spring-hateoas.version>0.12.0.BUILD-SNAPSHOT</spring-hateoas.version>
+		<spring-integration.version>4.0.1.BUILD-SNAPSHOT</spring-integration.version>
+		<spring-ldap.version>2.0.2.CI-SNAPSHOT</spring-ldap.version>
 		<spring-plugin.version>1.1.0.RELEASE</spring-plugin.version>
 		<spring-retry.version>1.1.0.RELEASE</spring-retry.version>
 		<spring-social.version>1.1.0.RELEASE</spring-social.version>
 		<spring-social-facebook.version>1.1.1.RELEASE</spring-social-facebook.version>
 		<spring-social-twitter.version>1.1.0.RELEASE</spring-social-twitter.version>
-		<spring-web-flow.version>2.4.0.RC1</spring-web-flow.version>
-		<spring-web-services.version>2.2.0.RC1</spring-web-services.version>
+		<spring-security.version>3.2.4.CI-SNAPSHOT</spring-security.version>
+		<spring-security-oauth.version>2.0.1.RELEASE</spring-security-oauth.version>
+		<spring-web-flow.version>2.4.0.BUILD-SNAPSHOT</spring-web-flow.version>
+		<spring-web-services.version>2.2.0.BUILD-SNAPSHOT</spring-web-services.version>
 
 		<ant.version>1.9.3</ant.version>
 		<antlr.version>2.7.7</antlr.version>
@@ -235,23 +250,6 @@
 				<version>${spring-data-hadoop.version}</version>
 			</dependency>
 
-			<!-- Spring Batch -->
-			<dependency>
-				<groupId>org.springframework.batch</groupId>
-				<artifactId>spring-batch-infrastructure</artifactId>
-				<version>${spring-batch.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.batch</groupId>
-				<artifactId>spring-batch-integration</artifactId>
-				<version>${spring-batch.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.batch</groupId>
-				<artifactId>spring-batch-test</artifactId>
-				<version>${spring-batch.version}</version>
-			</dependency>
-
 			<!-- Spring Cloud -->
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
@@ -304,6 +302,18 @@
 				<groupId>org.springframework.ldap</groupId>
 				<artifactId>spring-ldap-test</artifactId>
 				<version>${spring-ldap.version}</version>
+			</dependency>
+
+			<!-- Spring Plugin -->
+			<dependency>
+				<groupId>org.springframework.plugin</groupId>
+				<artifactId>spring-plugin-core</artifactId>
+				<version>${spring-plugin.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.plugin</groupId>
+				<artifactId>spring-plugin-metadata</artifactId>
+				<version>${spring-plugin.version}</version>
 			</dependency>
 
 			<!-- Spring Retry -->
@@ -1077,11 +1087,6 @@
 				<version>${tomcat.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.apache.velocity</groupId>
-				<artifactId>velocity</artifactId>
-				<version>${velocity.version}</version>
-			</dependency>
-			<dependency>
 				<groupId>org.apache.xmlbeans</groupId>
 				<artifactId>xmlbeans</artifactId>
 				<version>${xmlbeans.version}</version>
@@ -1317,17 +1322,17 @@
 
 	<profiles>
 		<profile>
-			<id>spring-milestones</id>
+			<id>spring-snapshots</id>
 			<activation>
 				<activeByDefault>true</activeByDefault>
 			</activation>
 			<repositories>
 				<repository>
-					<id>spring-milestones</id>
-					<name>Spring Milestones</name>
-					<url>http://repo.spring.io/libs-milestone</url>
+					<id>spring-snapshots</id>
+					<name>Spring Snapshots</name>
+					<url>http://repo.spring.io/libs-snapshot</url>
 					<snapshots>
-						<enabled>false</enabled>
+						<enabled>true</enabled>
 					</snapshots>
 				</repository>
 			</repositories>
