Correct the artifact id in the quickstart
The platform artifact in now called platform-bom. Update the
quickstart to reflect this change.

Fixed #6

--- a/_includes/pom.xml
+++ b/_includes/pom.xml
@@ -2,7 +2,7 @@
     <dependencies>
         <dependency>
             <groupId>io.spring.platform</groupId>
-            <artifactId>platform</artifactId>
+            <artifactId>platform-bom</artifactId>
             <version>{@= version @}</version>
             <type>pom</type>
             <scope>import</scope>
