--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -21,7 +21,7 @@
 
 	<properties>
 
-		<grails.version>2.4.0.RC1</grails.version>
+		<grails.version>2.4.0</grails.version>
 
 		<spring-batch.version>3.0.0.BUILD-SNAPSHOT</spring-batch.version>
 		<spring-cloud.version>1.0.0.BUILD-SNAPSHOT</spring-cloud.version>
