--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -27,7 +27,7 @@
 		<spring-cloud.version>1.0.0.BUILD-SNAPSHOT</spring-cloud.version>
 		<spring-data-hadoop.version>2.0.0.BUILD-SNAPSHOT</spring-data-hadoop.version>
 		<spring-integration.version>4.0.1.BUILD-SNAPSHOT</spring-integration.version>
-		<spring-ldap.version>2.0.2.CI-SNAPSHOT</spring-ldap.version>
+		<spring-ldap.version>2.0.2.RELEASE</spring-ldap.version>
 		<spring-plugin.version>1.1.0.RELEASE</spring-plugin.version>
 		<spring-retry.version>1.1.0.RELEASE</spring-retry.version>
 		<spring-social.version>1.1.0.RELEASE</spring-social.version>
