--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -36,7 +36,7 @@
 		<spring-security.version>3.2.4.CI-SNAPSHOT</spring-security.version>
 		<spring-security-oauth.version>2.0.1.RELEASE</spring-security-oauth.version>
 		<spring-web-flow.version>2.4.0.BUILD-SNAPSHOT</spring-web-flow.version>
-		<spring-web-services.version>2.2.0.BUILD-SNAPSHOT</spring-web-services.version>
+		<spring-web-services.version>2.2.0.RELEASE</spring-web-services.version>
 
 		<ant.version>1.9.3</ant.version>
 		<antlr.version>2.7.7</antlr.version>
