--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -46,24 +46,30 @@
 		<bsh.version>2.0b4</bsh.version>
 		<c3p0.version>0.9.2.1</c3p0.version>
 		<cas-client.version>3.2.1</cas-client.version>
+		<cassandra.version>2.0.6</cassandra.version>
+		<cassandra-driver.version>2.0.2</cassandra-driver.version>
 		<castor.version>1.3.3</castor.version>
 		<commonj.version>1.1.0</commonj.version>
 		<commons-beanutils.version>1.8.3</commons-beanutils.version>
 		<commons-cli.version>1.2</commons-cli.version>
 		<commons-codec.version>1.7</commons-codec.version>
 		<commons-collections.version>3.2.1</commons-collections.version>
+		<commons-configuration.version>1.6</commons-configuration.version>
 		<commons-dbcp2.version>2.0</commons-dbcp2.version>
 		<commons-fileupload.version>1.3.1</commons-fileupload.version>
 		<commons-io.version>2.4</commons-io.version>
 		<commons-httpclient.version>3.1</commons-httpclient.version>
 		<commons-lang.version>2.6</commons-lang.version>
+		<commons-lang3.version>3.1</commons-lang3.version>
 		<commons-logging.version>1.1.3</commons-logging.version>
 		<commons-net.version>3.3</commons-net.version>
+		<couchbase-client.version>1.4.1</couchbase-client.version>
 		<derby.version>10.10.2.0</derby.version>
 		<dom4j.version>1.6.1</dom4j.version>
 		<eclipselink.version>2.5.1</eclipselink.version>
 		<eclipselink-javax-persistence.version>2.1.0</eclipselink-javax-persistence.version>
 		<ehcache-core.version>2.6.5</ehcache-core.version>
+		<elasticsearch.version>1.1.1</elasticsearch.version>
 		<evo-inflector.version>1.1</evo-inflector.version>
 		<findbugs-jsr305.version>2.0.0</findbugs-jsr305.version>
 		<gpars.version>1.2.0</gpars.version>
@@ -75,6 +81,7 @@
 		<hessian.version>4.0.7</hessian.version>
 		<hibernate-annotations.version>3.3.1.GA</hibernate-annotations.version>
 		<hive.version>0.12.0</hive.version>
+		<httpcomponents.version>${httpclient.version}</httpcomponents.version>
 		<ibatis-sqlmap.version>2.3.4.726</ibatis-sqlmap.version>
 		<itext.version>2.1.7</itext.version>
 		<ivy.version>2.3.0</ivy.version>
@@ -96,6 +103,7 @@
 		<javax-jax-rs.version>1.0</javax-jax-rs.version>
 		<javax-jdo.version>3.0</javax-jdo.version>
 		<javax-jsp.version>2.2.1</javax-jsp.version>
+		<javax-jstl.version>1.2.1</javax-jstl.version>
 		<javax-mail.version>1.4.7</javax-mail.version>
 		<javax-portlet.version>2.0</javax-portlet.version>
 		<javax-saaj.version>1.3.5</javax-saaj.version>
@@ -128,6 +136,10 @@
 		<openhft-lang.version>6.1.4</openhft-lang.version>
 		<openjpa.version>2.3.0</openjpa.version>
 		<nekohtml.version>1.9.20</nekohtml.version>
+		<neo4j.version>2.0.3</neo4j.version>
+		<neo4j-cypher-dsl.version>2.0.1</neo4j-cypher-dsl.version>
+		<neo4j-graph-collections.version>0.7.1-neo4j-2.0.1</neo4j-graph-collections.version>
+		<neo4j-spatial.version>0.12-neo4j-2.0.1</neo4j-spatial.version>
 		<netty.version>4.0.18.Final</netty.version>
 		<objenesis.version>2.1</objenesis.version>
 		<ognl.version>2.6.11</ognl.version>
@@ -143,6 +155,7 @@
 		<protobuf.version>2.5.0</protobuf.version>
 		<smack.version>3.2.1</smack.version>
 		<snappy.version>1.1.0.1</snappy.version>
+		<solr.version>4.7.2</solr.version>
 		<spullara-redis.version>0.7</spullara-redis.version>
 		<sun-facelets.version>1.1.14</sun-facelets.version>
 		<sun-jsf.version>2.2.4</sun-jsf.version>
@@ -424,6 +437,16 @@
 				<version>${hessian.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>com.couchbase.client</groupId>
+				<artifactId>couchbase-client</artifactId>
+				<version>${couchbase-client.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.datastax.cassandra</groupId>
+				<artifactId>cassandra-driver-dse</artifactId>
+				<version>${cassandra-driver.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>com.esotericsoftware.kryo</groupId>
 				<artifactId>kryo</artifactId>
 				<version>${kryo.version}</version>
@@ -535,6 +558,11 @@
 			</dependency>
 			<dependency>
 				<groupId>com.mysema.querydsl</groupId>
+				<artifactId>querydsl-lucene3</artifactId>
+				<version>${querydsl.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.mysema.querydsl</groupId>
 				<artifactId>querydsl-mongodb</artifactId>
 				<version>${querydsl.version}</version>
 			</dependency>
@@ -607,6 +635,11 @@
 				<groupId>commons-collections</groupId>
 				<artifactId>commons-collections</artifactId>
 				<version>${commons-collections.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-configuration</groupId>
+				<artifactId>commons-configuration</artifactId>
+				<version>${commons-configuration.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>commons-fileupload</groupId>
@@ -854,9 +887,19 @@
 				<version>${ant.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>org.apache.cassandra</groupId>
+				<artifactId>cassandra-all</artifactId>
+				<version>${cassandra.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-dbcp2</artifactId>
 				<version>${commons-dbcp2.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-lang3</artifactId>
+				<version>${commons-lang3.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.derby</groupId>
@@ -980,6 +1023,16 @@
 				<version>${hive.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpclient-cache</artifactId>
+				<version>${httpcomponents.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpmime</artifactId>
+				<version>${httpcomponents.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>org.apache.ibatis</groupId>
 				<artifactId>ibatis-sqlmap</artifactId>
 				<version>${ibatis-sqlmap.version}</version>
@@ -1013,6 +1066,11 @@
 				<groupId>org.apache.poi</groupId>
 				<artifactId>poi</artifactId>
 				<version>${poi.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.solr</groupId>
+				<artifactId>solr-core</artifactId>
+				<version>${solr.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.tiles</groupId>
@@ -1160,6 +1218,11 @@
 				<version>${eclipselink.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>org.elasticsearch</groupId>
+				<artifactId>elasticsearch</artifactId>
+				<version>${elasticsearch.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>org.erlang.otp</groupId>
 				<artifactId>jinterface</artifactId>
 				<version>${jinterface.version}</version>
@@ -1240,6 +1303,36 @@
 				<version>${kite.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>org.neo4j</groupId>
+				<artifactId>neo4j</artifactId>
+				<version>${neo4j.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.neo4j</groupId>
+				<artifactId>neo4j-cypher</artifactId>
+				<version>${neo4j.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.neo4j</groupId>
+				<artifactId>neo4j-cypher-dsl</artifactId>
+				<version>${neo4j-cypher-dsl.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.neo4j</groupId>
+				<artifactId>neo4j-graph-collections</artifactId>
+				<version>${neo4j-graph-collections.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.neo4j</groupId>
+				<artifactId>neo4j-spatial</artifactId>
+				<version>${neo4j-spatial.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.neo4j</groupId>
+				<artifactId>server-api</artifactId>
+				<version>${neo4j.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>org.objenesis</groupId>
 				<artifactId>objenesis</artifactId>
 				<version>${objenesis.version}</version>
@@ -1315,6 +1408,6 @@
 				</repository>
 			</repositories>
 		</profile>
-  	</profiles>
+	</profiles>
 
 </project>
