--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -29,7 +29,7 @@
 		<spring-plugin.version>1.1.0.RELEASE</spring-plugin.version>
 		<spring-retry.version>1.1.0.RELEASE</spring-retry.version>
 		<spring-security-oauth.version>2.0.1.RELEASE</spring-security-oauth.version>
-		<spring-web-flow.version>2.4.0.BUILD-SNAPSHOT</spring-web-flow.version>
+		<spring-web-flow.version>2.4.0.RELEASE</spring-web-flow.version>
 		<spring-web-services.version>2.2.0.RELEASE</spring-web-services.version>
 
 		<ant.version>1.9.3</ant.version>
