--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -23,7 +23,7 @@
 
 		<grails.version>2.4.0</grails.version>
 
-		<spring-cloud.version>1.0.0.BUILD-SNAPSHOT</spring-cloud.version>
+		<spring-cloud.version>1.0.0.RELEASE</spring-cloud.version>
 		<spring-data-hadoop.version>2.0.0.BUILD-SNAPSHOT</spring-data-hadoop.version>
 		<spring-ldap.version>2.0.2.RELEASE</spring-ldap.version>
 		<spring-plugin.version>1.1.0.RELEASE</spring-plugin.version>
