--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -50,7 +50,6 @@
 		<commons-beanutils.version>1.8.3</commons-beanutils.version>
 		<commons-cli.version>1.2</commons-cli.version>
 		<commons-codec.version>1.7</commons-codec.version>
-		<commons-collections.version>3.2.1</commons-collections.version>
 		<commons-configuration.version>1.6</commons-configuration.version>
 		<commons-dbcp2.version>2.0</commons-dbcp2.version>
 		<commons-fileupload.version>1.3.1</commons-fileupload.version>
@@ -77,7 +76,6 @@
 		<hbase.version>0.96.1.1-hadoop2</hbase.version>
 		<hessian.version>4.0.7</hessian.version>
 		<hive.version>0.12.0</hive.version>
-		<httpcomponents.version>${httpclient.version}</httpcomponents.version>
 		<ibatis-sqlmap.version>2.3.4.726</ibatis-sqlmap.version>
 		<itext.version>2.1.7</itext.version>
 		<ivy.version>2.3.0</ivy.version>
@@ -410,11 +408,6 @@
 				<version>${kryo.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>com.fasterxml.jackson.core</groupId>
-				<artifactId>jackson-annotations</artifactId>
-				<version>${jackson.version}</version>
-			</dependency>
-			<dependency>
 				<groupId>com.fasterxml.jackson.datatype</groupId>
 				<artifactId>jackson-datatype-hibernate4</artifactId>
 				<version>${jackson.version}</version>
@@ -588,11 +581,6 @@
 				<groupId>commons-codec</groupId>
 				<artifactId>commons-codec</artifactId>
 				<version>${commons-codec.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>commons-collections</groupId>
-				<artifactId>commons-collections</artifactId>
-				<version>${commons-collections.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>commons-configuration</groupId>
@@ -983,12 +971,7 @@
 			<dependency>
 				<groupId>org.apache.httpcomponents</groupId>
 				<artifactId>httpclient-cache</artifactId>
-				<version>${httpcomponents.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.httpcomponents</groupId>
-				<artifactId>httpmime</artifactId>
-				<version>${httpcomponents.version}</version>
+				<version>${httpclient.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.ibatis</groupId>
