--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -47,7 +47,6 @@
 		<cassandra-driver.version>2.0.2</cassandra-driver.version>
 		<castor.version>1.3.3</castor.version>
 		<commonj.version>1.1.0</commonj.version>
-		<commons-beanutils.version>1.8.3</commons-beanutils.version>
 		<commons-cli.version>1.2</commons-cli.version>
 		<commons-codec.version>1.7</commons-codec.version>
 		<commons-configuration.version>1.6</commons-configuration.version>
@@ -147,7 +146,6 @@
 		<protobuf.version>2.5.0</protobuf.version>
 		<smack.version>3.2.1</smack.version>
 		<snappy.version>1.1.0.1</snappy.version>
-		<solr.version>4.7.2</solr.version>
 		<spullara-redis.version>0.7</spullara-redis.version>
 		<sun-facelets.version>1.1.14</sun-facelets.version>
 		<sun-jsf.version>2.2.4</sun-jsf.version>
@@ -160,8 +158,7 @@
 		<tyrus.version>1.2.1</tyrus.version>
 		<typica.version>1.3</typica.version>
 		<undertow.version>1.0.1.Final</undertow.version>
-		<velocity.version>1.7</velocity.version>
-		<velocity-tools.version>1.4</velocity-tools.version>
+		<velocity-tools-view.version>1.4</velocity-tools-view.version>
 		<websphere-uow.version>6.0.2.17</websphere-uow.version>
 		<woodstox.version>4.2.0</woodstox.version>
 		<wss4j.version>1.6.15</wss4j.version>
@@ -1273,7 +1270,7 @@
 			<dependency>
 				<groupId>velocity-tools</groupId>
 				<artifactId>velocity-tools-view</artifactId>
-				<version>${velocity-tools.version}</version>
+				<version>${velocity-tools-view.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>xom</groupId>
