--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -47,6 +47,7 @@
 		<cassandra-driver.version>2.0.2</cassandra-driver.version>
 		<castor.version>1.3.3</castor.version>
 		<commonj.version>1.1.0</commonj.version>
+		<commons-beanutils-core.version>1.8.3</commons-beanutils-core.version>
 		<commons-cli.version>1.2</commons-cli.version>
 		<commons-codec.version>1.7</commons-codec.version>
 		<commons-configuration.version>1.6</commons-configuration.version>
@@ -544,7 +545,7 @@
 			<dependency>
 				<groupId>commons-beanutils</groupId>
 				<artifactId>commons-beanutils-core</artifactId>
-				<version>${commons-beanutils.version}</version>
+				<version>${commons-beanutils-core.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>commons-cli</groupId>
