--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -24,7 +24,7 @@
 		<grails.version>2.4.0</grails.version>
 
 		<spring-cloud.version>1.0.0.RELEASE</spring-cloud.version>
-		<spring-data-hadoop.version>2.0.0.BUILD-SNAPSHOT</spring-data-hadoop.version>
+		<spring-data-hadoop.version>2.0.0.RELEASE</spring-data-hadoop.version>
 		<spring-ldap.version>2.0.2.RELEASE</spring-ldap.version>
 		<spring-plugin.version>1.1.0.RELEASE</spring-plugin.version>
 		<spring-retry.version>1.1.0.RELEASE</spring-retry.version>
@@ -1286,24 +1286,4 @@
 
 		</dependencies>
 	</dependencyManagement>
-
-	<profiles>
-		<profile>
-			<id>spring-snapshots</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<repositories>
-				<repository>
-					<id>spring-snapshots</id>
-					<name>Spring Snapshots</name>
-					<url>http://repo.spring.io/libs-snapshot</url>
-					<snapshots>
-						<enabled>true</enabled>
-					</snapshots>
-				</repository>
-			</repositories>
-		</profile>
-	</profiles>
-
 </project>
