--- a/platform/pom.xml
+++ b/platform/pom.xml
@@ -13,7 +13,7 @@
 	<description>Spring IO Platform</description>
 
 	<properties>
-		<spring-boot.version>1.1.0.BUILD-SNAPSHOT</spring-boot.version>
+		<spring-boot.version>1.1.0.RELEASE</spring-boot.version>
 	</properties>
 
 	<dependencies>
