--- a/platform-versions/pom.xml
+++ b/platform-versions/pom.xml
@@ -16,6 +16,33 @@
 	<packaging>pom</packaging>
 	<name>Spring IO Platform versions</name>
 	<description>Spring IO Platform versions</description>
+	<url>http://platform.spring.io/platform/</url>
+	<organization>
+		<name>Pivotal Software, Inc.</name>
+		<url>http://www.spring.io</url>
+	</organization>
+	<licenses>
+		<license>
+			<name>Apache License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
+		</license>
+	</licenses>
+	<scm>
+		<connection>scm:git:https://github.com/spring-io/platform</connection>
+		<url>https://github.com/spring-io/platform</url>
+	</scm>
+	<developers>
+		<developer>
+			<id>wilkinsona</id>
+			<name>Andy Wilkinson</name>
+			<email>awilkinson at gopivotal.com</email>
+			<organization>Pivotal Software, Inc.</organization>
+			<organizationUrl>http://www.spring.io</organizationUrl>
+			<roles>
+				<role>Project lead</role>
+			</roles>
+		</developer>
+	</developers>
 
 	<build>
 		<resources>
