--- a/platform/pom.xml
+++ b/platform/pom.xml
@@ -9,8 +9,35 @@
 	</parent>
 
 	<artifactId>platform</artifactId>
-	<name>Spring IO Platform</name>
-	<description>Spring IO Platform</description>
+	<name>Spring IO Platform documentation</name>
+	<description>Spring IO Platform documentation</description>
+	<url>http://platform.spring.io/platform/</url>
+	<organization>
+		<name>Pivotal Software, Inc.</name>
+		<url>http://www.spring.io</url>
+	</organization>
+	<licenses>
+		<license>
+			<name>Apache License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
+		</license>
+	</licenses>
+	<scm>
+		<connection>scm:git:https://github.com/spring-io/platform</connection>
+		<url>https://github.com/spring-io/platform</url>
+	</scm>
+	<developers>
+		<developer>
+			<id>wilkinsona</id>
+			<name>Andy Wilkinson</name>
+			<email>awilkinson at gopivotal.com</email>
+			<organization>Pivotal Software, Inc.</organization>
+			<organizationUrl>http://www.spring.io</organizationUrl>
+			<roles>
+				<role>Project lead</role>
+			</roles>
+		</developer>
+	</developers>
 
 	<properties>
 		<spring-boot.version>1.1.0.RELEASE</spring-boot.version>
