--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -9,7 +9,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.1.1.RELEASE</version>
-		<relativePath></relativePath>
+		<relativePath/>
 	</parent>
 
 	<groupId>io.spring.platform</groupId>
