--- a/_includes/build.gradle
+++ b/_includes/build.gradle
@@ -1,4 +1,7 @@
 buildscript {
+    repositories {
+        mavenCentral()
+    }
     dependencies {
         classpath 'org.springframework.boot:spring-boot-gradle-plugin:1.1.1.RELEASE'
     }
