--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -247,7 +247,7 @@ platform_definition:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 4.0.5.RELEASE
+      version: 4.1.0.BUILD-SNAPSHOT
       modules:
         - spring-aop
         - spring-aspects
