--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -1208,6 +1208,16 @@
 				<version>${hibernate.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>org.hibernate</groupId>
+				<artifactId>hibernate-ehcache</artifactId>
+				<version>${hibernate.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.hibernate</groupId>
+				<artifactId>hibernate-envers</artifactId>
+				<version>${hibernate.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>org.igniterealtime.smack</groupId>
 				<artifactId>smack</artifactId>
 				<version>${smack.version}</version>
